book-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service-deployment
  namespace: my-name-space
  labels:
    app: book-service-app
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service-app     
  template:
    metadata:
      labels:
        app: book-service-app
    spec:
      containers:
      - name: book-container
        image: raj2244/book-service
        ports:
        - containerPort: 8761

---

apiVersion: v1
kind: Service
metadata:
  name: book-service
  namespace: my-name-space
spec:
  selector:
    app: book-service-app
  type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 9002
      targetPort: 9002
