postgresql-deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  namespace: my-name-space
spec:
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - image: postgres
        name: postgresql-container
        ports:
        - containerPort: 5432
          name: postgresql
        volumeMounts:
        - name: postgresql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: postgresql-persistent-storage
        persistentVolumeClaim:
          claimName: postgresql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: my-name-space
spec:
  ports:
  - port: 5432
  selector:
    app: postgresql
