ingress-svc.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: rajapp.com
    http:
      paths:
      - path: /students
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 80
      - path: /books
        pathType: Prefix
        backend:
          service:
            name: book-service
            port:
              number: 80
